[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resourses/Scenes/MainCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 928, 108 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 928, 108 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 108, 640 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 108, 640 )

[node name="MainCamera" type="Camera2D"]
position = Vector2( 672, 384 )
current = true
script = ExtResource( 1 )

[node name="BottomArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="BottomAreaColision" type="CollisionShape2D" parent="BottomArea"]
visible = false
position = Vector2( 0, 532 )
shape = SubResource( 1 )

[node name="TopArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="TopAreaColision" type="CollisionShape2D" parent="TopArea"]
visible = false
position = Vector2( 0, -532 )
shape = SubResource( 2 )

[node name="LeftArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="LeftAreaColision" type="CollisionShape2D" parent="LeftArea"]
visible = false
position = Vector2( -820, 0 )
shape = SubResource( 3 )

[node name="RightArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="RightAreaColision" type="CollisionShape2D" parent="RightArea"]
visible = false
position = Vector2( 820, 0 )
shape = SubResource( 4 )

[connection signal="area_entered" from="BottomArea" to="." method="_on_BottomArea_area_entered"]
[connection signal="area_entered" from="TopArea" to="." method="_on_TopArea_area_entered"]
[connection signal="area_entered" from="LeftArea" to="." method="_on_LeftArea_area_entered"]
[connection signal="area_entered" from="RightArea" to="." method="_on_RightArea_area_entered"]
